cmake_minimum_required(VERSION 3.10)

project(07-template LANGUAGES CXX)

add_executable(cmaketest cmaketest.cpp)

add_executable(concepts concepts.cpp)

add_executable(templateargumentoperations templateargumentoperations.cpp)

add_executable(variable_templates variable_templates.cpp)

add_executable(finally finally.cpp)